<?xml version="1.0" encoding="utf-8"?>
<com.jmedeisis.draglinearlayout.DragLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:text="@string/please_drag_and_drop_me_somewhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="10dp"/>

    <TextView
        android:text="@string/this_tutorial_uses_a_third_party_library_to_drag_linearlayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="10dp"
         />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ab_solid_shadow_holo"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ever_thought_how_dragging_songs_in_an_application_playlist_works" />


    <!--below is the simple text view-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="20dp"
        android:text="@string/geeks_for_geeks"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--below is the simple text view-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="10dp"
        android:paddingTop="30dp"
        android:text="@string/dsa_course"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image"/>

</com.jmedeisis.draglinearlayout.DragLinearLayout>